// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer > should remove files from the cache when they are deleted 1`] = `
"{
  "version": 2,
  "testCache": {
    "test": {
      ".betterer.js": "a3a5145d2d2ec4828c977274956d91469148cddeeb33a7629e133b81f05591cf",
      "src/file-1.ts": "5458e7616c690e6baf27a785a3f14f3e6fc3737fce3fd1f1e6c8e6692c093be0",
      "src/file-2.ts": "5458e7616c690e6baf27a785a3f14f3e6fc3737fce3fd1f1e6c8e6692c093be0"
    }
  }
}"
`;

exports[`betterer > should remove files from the cache when they are deleted 2`] = `
"{
  "version": 2,
  "testCache": {
    "test": {
      ".betterer.js": "a3a5145d2d2ec4828c977274956d91469148cddeeb33a7629e133b81f05591cf",
      "src/file-1.ts": "5458e7616c690e6baf27a785a3f14f3e6fc3737fce3fd1f1e6c8e6692c093be0"
    }
  }
}"
`;

exports[`betterer > should remove files from the cache when they are deleted 3`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    "src/file-1.ts:153364047": [
      [0, 0, 7, "RegExp match", "645651780"],
      [1, 0, 7, "RegExp match", "645651780"]
    ]
  }\`
};
"
`;

exports[`betterer > should remove files from the cache when they are deleted 4`] = `
"{
  "version": 2,
  "testCache": {
    "test": {
      ".betterer.js": "a3a5145d2d2ec4828c977274956d91469148cddeeb33a7629e133b81f05591cf",
      "src/file-1.ts": "5458e7616c690e6baf27a785a3f14f3e6fc3737fce3fd1f1e6c8e6692c093be0"
    }
  }
}"
`;

exports[`betterer > should remove files from the cache when they are deleted 5`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    "src/file-1.ts:153364047": [
      [0, 0, 7, "RegExp match", "645651780"],
      [1, 0, 7, "RegExp match", "645651780"]
    ]
  }\`
};
"
`;

exports[`betterer > should remove files from the cache when they are deleted 6`] = `
[
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! (4 issues) 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! (4 issues) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got better! (2 fixed issues, 2 remaining) 😍
・ 2 fixed issues in "fixtures/cache-deleted-file/src/file-2.ts".
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got better! (2 fixed issues, 2 remaining) 😍
・ 2 fixed issues in "fixtures/cache-deleted-file/src/file-2.ts".

1 test got checked. 🤔
1 test got better! 😍
",
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "💥 Betterer (0ms): 1 test done! 1 test errored!
🔥 test: "test" got worse. (2 new issues, 2 existing, 4 total) 😔
・ 2 new issues in "fixtures/cache-deleted-file/src/file-2.ts".
・ Showing first of 2 new issues:
・
・ > 1 | // HACK:
・     | ^^^^^^^ RegExp match
・   2 | // HACK:
・
",
  "💥 Betterer (0ms): 1 test done! 1 test errored!
🔥 test: "test" got worse. (2 new issues, 2 existing, 4 total) 😔
・ 2 new issues in "fixtures/cache-deleted-file/src/file-2.ts".
・ Showing first of 2 new issues:
・
・ > 1 | // HACK:
・     | ^^^^^^^ RegExp match
・   2 | // HACK:
・

1 test got checked. 🤔
1 test got worse. 😔

You should try to fix the new issues! As a last resort, you can run \`betterer --update\` to force an update of the results file. 🆙
",
]
`;
